--- a/simplegrid.css
+++ b/simplegrid.css
@@ -3,32 +3,23 @@
   Project Page - http://thisisdallas.github.com/Simple-Grid/
   Author - Dallas Bass
   Site - http://dallasbass.com
+  
+  Fork for Auriga UI Kit
 */
 
 
-[class*='grid'],
-[class*='col-'],
-[class*='mobile-'],
-.grid:after {
+*, *:after, *:before {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-	box-sizing: border-box;	
+	box-sizing: border-box;
 }
 
 [class*='col-'] {
 	float: left;
-  	min-height: 1px;
-	padding-right: 20px; /* column-space */
-}
-
-[class*='col-'] [class*='col-']:last-child {
-	padding-right: 0;
 }
 
 .grid {
 	width: 100%;
-	max-width: 1140px;
-	min-width: 748px; /* when using padded grid on ipad in portrait mode, width should be viewport-width - padding = (768 - 20) = 748. actually, it should be even smaller to allow for padding of grid containing element */
 	margin: 0 auto;
 	overflow: hidden;
 }
@@ -41,8 +32,6 @@
 
 .grid-pad {
 	padding-top: 20px;
-	padding-left: 20px; /* grid-space to left */
-	padding-right: 0; /* grid-space to right: (grid-space-left - column-space) e.g. 20px-20px=0 */
 }
 
 .push-right {
@@ -180,16 +169,16 @@
 		min-width: 0;
 		margin-left: 0;
 		margin-right: 0;
-		padding-left: 20px; /* grid-space to left */
-		padding-right: 10px; /* grid-space to right: (grid-space-left - column-space) e.g. 20px-10px=10px */
+		padding-left: 0;
+		padding-right: 0;
 	}
 
 	[class*='col-'] {
 		width: auto;
 		float: none;
-		margin: 10px 0;
+		margin: 0;
 		padding-left: 0;
-		padding-right: 10px; /* column-space */
+		padding-right: 0;
 	}
 
 	[class*='col-'] [class*='col-'] {
@@ -200,9 +189,9 @@
 
 	[class*='mobile-col-'] {
 		float: left;
-		margin: 0 0 10px;
+		margin: 0;
 		padding-left: 0;
-		padding-right: 10px; /* column-space */
+		padding-right: 0;
 		padding-bottom: 0;
 	}
 
